WIP Registration Screen - Working Now

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -2,65 +2,42 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/onboardingHeaderTv"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="@string/onboarding_header"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/onboardingBodyTv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/onboardingBodyTv"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="@string/onboarding_body"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="14sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/loginRv"
+        android:layout_width="0dp"
+        android:layout_height="450dp"
+        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toTopOf="@+id/loginBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:background="@drawable/default_outlined_button_style"
-        android:drawableStart="@drawable/ic_google_scale"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
         android:padding="10dp"
         android:text="@string/login_button"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:typeface="normal"
+        app:backgroundTint="@color/main_green"
+        app:iconTint="@null"
+        app:cornerRadius="30dp"
+        app:icon="@drawable/ic_google_scale"
+        app:iconSize="30dp"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp"
+        app:strokeColor="@color/black"
+        app:strokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_width="308dp"
-        android:layout_height="240dp"
-        app:layout_constraintBottom_toTopOf="@+id/onboardingHeaderTv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.903" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
