--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.ITISMob_MCO" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.ITISMob_MCO" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/main_green</item>
         <item name="colorSecondary">@color/white</item>
         <item name="android:statusBarColor">?attr/colorPrimary</item>
