--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         android:padding="10dp"
-        android:text="@string/login_button"
+        android:text="@string/login_btn"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
