--- a/app/src/main/res/drawable/ic_scanner.xml
+++ b/app/src/main/res/drawable/ic_scanner.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorOnPrimary">
+    android:viewportWidth="28"
+    android:viewportHeight="28">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M4,4h10v2h-10zM4,8h10v2h-4v8h-2v-8h-4zM18,20h-8v-2h8v2zM19,2c1.1,0 2,0.9 2,2v14c0,1.1 -0.9,2 -2,2h-4v-2h4V4h-10v2h4v2h-8v2h2v8h2v-8h10V2h-4z"/>
+        android:fillColor="#000000"
+        android:pathData="M6,6h4V4H4v6h2V6zM22,4v2h-4v2h6V4h-2zM22,22h-4v2h6v-6h-2v4zM6,22v-4H4v6h6v-2H6zM7,13h14v2H7z"/>
 </vector>
