--- a/app/src/main/res/layout/books_card_layout.xml
+++ b/app/src/main/res/layout/books_card_layout.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_margin="8dp"
+    android:padding="8dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/bookImageIv"
+        android:layout_width="120dp"
+        android:layout_height="160dp"
+        android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/RoundedCornersImageView"
+        android:contentDescription="@string/book_image" />
+
+    <TextView
+        android:id="@+id/bookTitleTv"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:foregroundGravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginTop="6dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textAlignment="center"
+        android:text="An Introduction to Machine Learning"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:fontFamily="@font/poppins_medium" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/bookImageIv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/content"
-            app:shapeAppearanceOverlay="@style/RoundedCornersImageView" />
-
-        <TextView
-            android:id="@+id/bookTitleTv"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:paddingTop="3dp"
-            android:text="An Introduction to Machine Learning"
-            android:textSize="12sp" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
