--- a/app/src/main/res/layout/login_item_layout.xml
+++ b/app/src/main/res/layout/login_item_layout.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/loginImageIv"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
         app:layout_constraintBottom_toTopOf="@+id/loginHeaderTv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
