--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="main_green">#59ac77</color>
     <color name="main_orange">#F4991A</color>
     <color name="light_grey">#E0E0E0</color>
+    <color name="gray">#A6A6A6</color>
 </resources>
