--- a/app/src/main/res/layout/new_list_layout.xml
+++ b/app/src/main/res/layout/new_list_layout.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@android:color/transparent"
         android:ems="10"
