--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -14,36 +14,62 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="20dp"
         app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <SearchView
             android:id="@+id/bookSv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/search_bkg"
+            android:nestedScrollingEnabled="false"
+            android:paddingVertical="6dp"
+            android:textColorHint="@color/light_grey"
             app:closeIcon="@drawable/baseline_clear_24"
             app:iconifiedByDefault="false"
             app:queryHint="Title, Author or ISBN"
-            android:textColorHint="@color/light_grey"
             app:searchHintIcon="@null"
-            app:searchIcon="@drawable/baseline_search_24"
-            android:paddingVertical="6dp"
-            android:layout_marginBottom="12dp" />
+            app:searchIcon="@drawable/baseline_search_24">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/bookListRv"
+        </SearchView>
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:clipToPadding="false"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="4dp"
-            android:gravity="center"
-            android:visibility="gone"
-            tools:listitem="@layout/books_card_layout" />
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/genreListRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/bookListRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:clipToPadding="false"
+                    android:gravity="center"
+                    android:nestedScrollingEnabled="true"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="4dp"
+                    android:visibility="gone"
+                    tools:listitem="@layout/books_card_layout">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </LinearLayout>
+        </ScrollView>
+
     </LinearLayout>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
