--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -23,7 +23,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ReadIt"
+        android:text="@string/app_name"
         android:textColor="@color/black"
         android:textSize="70sp"
         android:textStyle="bold"
@@ -57,7 +57,7 @@
         app:tabGravity="center"
         app:tabIndicatorHeight="0dp" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -70,7 +70,6 @@
         android:textStyle="bold"
         app:backgroundTint="@color/main_green"
         app:cornerRadius="30dp"
-        app:icon="@drawable/ic_google_scale"
         app:iconGravity="start"
         app:iconPadding="8dp"
         app:iconSize="30dp"
