--- a/app/src/main/res/layout/profile_activity_layout.xml
+++ b/app/src/main/res/layout/profile_activity_layout.xml
@@ -34,29 +34,12 @@
 
     </androidx.cardview.widget.CardView>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/changePfpBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:backgroundTint="@color/main_green"
-        app:cornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profilePicHolderCv"
-        app:strokeColor="@color/black"
-        app:strokeWidth="1dp" />
-
     <EditText
         android:id="@+id/profileNameEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/edittext_border"
         android:ems="10"
@@ -67,21 +50,21 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changePfpBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/profilePicHolderCv" />
 
     <EditText
         android:id="@+id/profileBioEt"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/edittext_border"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="Add a Bio..."
         android:inputType="text"
         android:padding="10dp"
-        android:hint="Add a Bio..."
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +74,7 @@
         android:id="@+id/updateProfileBtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="Update"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -99,10 +82,27 @@
         android:textStyle="bold"
         app:backgroundTint="@color/main_green"
         app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileBioEt"
+        app:strokeColor="@color/black"
+        app:strokeWidth="1dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/logoutBtn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Logout"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/main_green"
+        app:cornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateProfileBtn"
         app:strokeColor="@color/black"
         app:strokeWidth="1dp" />
 
