--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.homepage.HomeActivity">
+    tools:context=".features.homepage.HomeActivity">
 
     <LinearLayout
         android:id="@+id/mainContentLayout"
