--- a/app/src/main/res/layout/books_card_layout.xml
+++ b/app/src/main/res/layout/books_card_layout.xml
@@ -22,11 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:ellipsize="end"
+        android:fontFamily="@font/poppins_medium"
         android:maxLines="2"
+        android:text="Title"
         android:textAlignment="center"
-        android:text="An Introduction to Machine Learning"
         android:textColor="@color/black"
-        android:textSize="12sp"
-        android:fontFamily="@font/poppins_medium" />
+        android:textSize="12sp" />
 
 </LinearLayout>
