--- a/app/src/main/res/layout/view_book_activity.xml
+++ b/app/src/main/res/layout/view_book_activity.xml
@@ -270,6 +270,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/line3" />
 
+        <!-- Add the noReviewsTv here -->
+        <TextView
+            android:id="@+id/noReviewsTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No reviews yet. Be the first to review!"
+            android:textAlignment="center"
+            android:padding="16dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/staticReviewsHeader"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/reviewRv"
             android:layout_width="match_parent"
