Done profile updating + added add to list modal logic

--- a/app/src/main/res/layout/lists_item_layout.xml
+++ b/app/src/main/res/layout/lists_item_layout.xml
@@ -8,14 +8,25 @@
     android:background="?attr/selectableItemBackground"
     android:padding="10dp">
 
+    <CheckBox
+        android:id="@+id/listCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/listNameTv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Name of List"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/listCheckbox"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
