--- a/app/src/main/res/layout/add_to_list_layout.xml
+++ b/app/src/main/res/layout/add_to_list_layout.xml
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:clickable="true"
-        android:text="Add"
+        android:text="Done"
         android:textColor="@color/main_green"
         android:textSize="16sp"
         android:textStyle="bold"
